fixed horizontal scroll

--- a/personal-site/src/app/globals.css
+++ b/personal-site/src/app/globals.css
@@ -19,6 +19,12 @@
   }
 }
 
+/* troubleshooting
+* {
+  outline: solid 1px red;
+}
+*/
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -61,5 +67,4 @@ section {
   flex-direction: row;
   position: relative;
   top: 173px;
-  left: 156px;
 }
